--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zerreta NEET Prep App</title>
-    <script>
-      // Force redirect login page to our standalone HTML version
-      if (window.location.pathname === '/login') {
-        window.location.href = '/standalone-login.html';
-      }
-    </script>
+    <title>Zerreta Learnings</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
