--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="theme-color" content="#7445f8" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Zerreta NEET Learning Platform - Advanced education platform for NEET preparation"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/zer-logo.png" />
+    <!-- iOS meta tags for PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Zerreta NEET">
+    <!-- Add splash screen images for iOS -->
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/assets/kid-quote.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zerreta Learnings</title>
+    <title>Zerreta NEET Learning</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
